--- a/about.html
+++ b/about.html
@@ -22,138 +22,97 @@
     <!-- Preloader -->
     <div id="preloader" class="preloader-content ">
         <div class="loading-window">
-            <div class="car">
+            <div class="car text-center">
                 <div class="strike"></div>
                 <div class="strike strike2"></div>
                 <div class="strike strike3"></div>
                 <div class="strike strike4"></div>
                 <div class="strike strike5"></div>
+                <div class="car-detail wheel wheel2"></div>
+                <p style="
+                top: 210px;
+                position: absolute;
+                left: 25px;
+                /* width: 108%; */
+                font-size: xxx-large;
+                letter-spacing: 5px;
+                font-family: system-ui;
+                line-height: 45px;
+            ">Energy TIres</p>
+                <!-- 
                 <div class="car-detail spoiler"></div>
                 <div class="car-detail back"></div>
                 <div class="car-detail center"></div>
                 <div class="car-detail center1"></div>
                 <div class="car-detail front"></div>
-                <div class="car-detail wheel"></div>
-                <div class="car-detail wheel wheel2"></div>
+                <div class="car-detail wheel"></div> -->
             </div>
         </div>
     </div>
 
-    <!-- Start Header Section -->
-    <header class="ak-site_header ak-style1 ak-sticky_header">
-        <div class="ak-main_header">
-            <div class="container">
-                <div class="ak-main_header_in">
-                    <div class="ak-main-header-left">
-                        <a class="ak-site_branding" href="index.html">
-                            <img src="assets/img/logo.svg" alt="...">
-                        </a>
+  <!-- Start Header Section -->
+  <header class="ak-site_header ak-style1 ak-sticky_header">
+    <div class="ak-main_header">
+        <div class="container">
+            <div class="ak-main_header_in">
+                <div class="ak-main-header-left">
+                    <a class="ak-site_branding" href="index.html">
+                        <img src="assets/img/logo/logo.png" alt="...">
+                    </a>
+                </div>
+                <div class="ak-main-header-center">
+                    <div class="ak-nav ak-medium">
+                        <ul class="ak-nav_list">
+                            <li class="menu-item-has-children">
+                                <a href="index.html" class="text-hover-animaiton">Acceuil</a>
+                            </li>
+                            <li>
+                                <a href="about.html" class="text-hover-animaiton">A propos</a>
+                            </li>
+                            <li class="menu-item-has-children">
+                                <a href="services.html" class="text-hover-animaiton">Services</a>
+                                <ul>
+                                    <li>
+                                        <a href="Services/Importation et distribution de pneumatique et lubrifiants moteur.html" class="text-hover-animaiton">Ventes de pneumatique & lubrifiants moteur</a>
+                                    </li>
+                                    <li>
+                                        <a href="services-two.html" class="text-hover-animaiton">Ateliers de réparation des voitures & poids lourd</a>
+                                    </li>
+                                    <li>
+                                        <a href="services-single.html" class="text-hover-animaiton">Ateliers mobile pour voitures</a>
+                                    </li>
+                                    <li>
+                                        <a href="services-single.html" class="text-hover-animaiton">Ateliers mobile pour poids lourd</a>
+                                    </li>
+                                    <li>
+                                        <a href="services-single.html" class="text-hover-animaiton">Formation et conseil Pneumatique et Lubrifiants de moteur</a>
+                                    </li>
+                                </ul>
+                            </li>
+                            
+                            <li>
+                                <a href="contact-us.html" class="text-hover-animaiton">Contactez Nous</a>
+                            </li>
+                        </ul>
                     </div>
-                    <div class="ak-main-header-center">
-                        <div class="ak-nav ak-medium">
-                            <ul class="ak-nav_list">
-                                <li class="menu-item-has-children">
-                                    <a href="index.html" class="text-hover-animaiton">Home</a>
-                                    <ul>
-                                        <li>
-                                            <a href="index.html" class="text-hover-animaiton">Main Home</a>
-                                        </li>
-                                        <li>
-                                            <a href="index-two.html" class="text-hover-animaiton">Car Workshop</a>
-                                        </li>
-                                        <li>
-                                            <a href="index-three.html" class="text-hover-animaiton">Auto Repair</a>
-                                        </li>
 
-                                    </ul>
-                                </li>
-                                <li>
-                                    <a href="about.html" class="text-hover-animaiton">About</a>
-                                </li>
-                                <li class="menu-item-has-children">
-                                    <a href="services.html" class="text-hover-animaiton">Services</a>
-                                    <ul>
-                                        <li>
-                                            <a href="services.html" class="text-hover-animaiton">Services</a>
-                                        </li>
-                                        <li>
-                                            <a href="services-two.html" class="text-hover-animaiton">Services Two</a>
-                                        </li>
-                                        <li>
-                                            <a href="services-single.html" class="text-hover-animaiton">Services
-                                                Single</a>
-                                        </li>
-                                    </ul>
-                                </li>
-                                <li class="menu-item-has-children">
-                                    <a href="blog.html" class="text-hover-animaiton">Blog</a>
-                                    <ul>
-                                        <li>
-                                            <a href="blog.html" class="text-hover-animaiton">Blog</a>
-                                        </li>
-                                        <li>
-                                            <a href="blog-single.html" class="text-hover-animaiton">Blog Single</a>
-                                        </li>
-                                    </ul>
-                                </li>
-                                <li class="menu-item-has-children">
-                                    <a href="#" class="text-hover-animaiton nav-pages-item">Pages</a>
-                                    <ul>
-                                        <li>
-                                            <a href="team.html" class="text-hover-animaiton">Team</a>
-                                        </li>
-                                        <li>
-                                            <a href="team-single.html" class="text-hover-animaiton">Team Single</a>
-                                        </li>
-                                        <li>
-                                            <a href="appointment.html" class="text-hover-animaiton">Appointment</a>
-                                        </li>
-                                        <li>
-                                            <a href="pricing.html" class="text-hover-animaiton">pricing</a>
-                                        </li>
-                                        <li>
-                                            <a href="testimonial.html" class="text-hover-animaiton">Testimonial</a>
-                                        </li>
-                                        <li>
-                                            <a href="gallery.html" class="text-hover-animaiton">Gallery </a>
-                                        </li>
-                                        <li>
-                                            <a href="video-gallery.html" class="text-hover-animaiton">Video Gallery </a>
-                                        </li>
-                                        <li>
-                                            <a href="faq.html" class="text-hover-animaiton">Faq</a>
-                                        </li>
-                                        <li>
-                                            <a href="comming.html" class="text-hover-animaiton">Comming Soon</a>
-                                        </li>
-                                        <li>
-                                            <a href="404.html" class="text-hover-animaiton">404 Page</a>
-                                        </li>
-                                    </ul>
-                                </li>
-                                <li>
-                                    <a href="contact-us.html" class="text-hover-animaiton">Contact</a>
-                                </li>
-                            </ul>
-                        </div>
-
-                    </div>
-                    <div class="ak-main-header-right">
-                        <a href="tel:1-800-915-6271">
-                            <div class="d-flex align-items-center gap-3">
-                                <div class="heartbeat-icon">
-                                    <span class="ak-heartbeat-btn"><img src="assets/img/phone.svg" alt="..."></span>
-                                </div>
-                                <h6> 1-800-915-6271</h6>
+                </div>
+                <div class="ak-main-header-right">
+                    <a href="tel:(+212) 05 22 67 48 98">
+                        <div class="d-flex align-items-center gap-3">
+                            <div class="heartbeat-icon">
+                                <span class="ak-heartbeat-btn"><img src="assets/img/phone.svg" alt="..."></span>
                             </div>
-                        </a>
-                    </div>
+                            <h6> (+212) 05 22 67 48 98</h6>
+                        </div>
+                    </a>
                 </div>
             </div>
         </div>
-        <div class="nav-bar-border"></div>
-    </header>
-    <!-- End Header Section -->
+    </div>
+    <div class="nav-bar-border"></div>
+</header>
+<!-- End Header Section -->
 
     <!-- Start common page title  -->
     <div data-src="assets/img/about-page-title.jpg" class="ak-bg">
@@ -222,22 +181,17 @@
             <div class="choose-us-contain">
                 <div class="choose-us-info" data-aos="fade-up">
                     <div class="ak-section-heading ak-style-1">
-                        <div class="background-text">Feature</div>
-                        <h2 class="ak-section-title">Why Choose Us</h2>
-                        <p class="ak-section-subtitle">Lorem Ipsum is simply dummy text of the printing and
-                            typesetting
-                            industry.
-                            Lorem
-                            Ipsum has been the industry's stan. Lorem Ipsum is simply dummy text of the printing and
-                            typesetting
-                            industry. Lorem Ipsum has been the industry's stan.</p>
+                        <div class="background-text">Qui Sommes Nous</div>
+                        <h2 class="ak-section-title">Pourquoi Energy Tires?</h2>
+                        <p class="ak-section-subtitle">Energy Tires est votre partenaire de confiance pour tous vos besoins en pneumatiques et lubrifiants. Avec plus de 20 ans d'expertise, nous avons bâti notre réputation sur trois piliers fondamentaux : l'innovation, la qualité et la satisfaction client. Nous collaborons avec des marques prestigieuses pour vous offrir des produits performants et durables, adaptés à vos exigences.
+                            Que vous soyez un particulier ou une entreprise, notre engagement est de vous fournir des solutions sur mesure, synonymes de mobilité fiable et de performance exceptionnelle. Présent au Maroc et à travers l’Afrique, Energy Tires s’impose comme un acteur de référence, toujours à vos côtés pour vous accompagner dans tous vos déplacements.</p>
                     </div>
                     <div class="ak-height-60 ak-height-lg-30"></div>
                     <div class="stroke-heading-text">
-                        <h3 class="ak-stroke-text hover-color-changes">Certified Technicians</h3>
-                        <h3 class="ak-stroke-text hover-color-changes">Comprehensive Repair Services</h3>
-                        <h3 class="ak-stroke-text hover-color-changes">900 Five Star Reviews</h3>
-                        <h3 class="ak-stroke-text hover-color-changes">Warranty on Repairs</h3>
+                        <h3 class="ak-stroke-text hover-color-changes">Qualité supérieure</h3>
+                        <h3 class="ak-stroke-text hover-color-changes">Expérience solide</h3>
+                        <h3 class="ak-stroke-text hover-color-changes">Performance garantie</h3>
+                        <h3 class="ak-stroke-text hover-color-changes">Experts qualifiés</h3>
                     </div>
                     <div class="ak-height-60 ak-height-lg-30"></div>
                     <a href="contact-us.html" class="common-btn">
