--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <!-- Preloader " -->
     <div id="preloader" class="preloader-content ">
         <div class="loading-window">
-             <div class="car text-center">
+            <div class="car text-center">
                 <div class="strike"></div>
                 <div class="strike strike2"></div>
                 <div class="strike strike3"></div>
@@ -74,7 +74,7 @@
                                     <a href="services.html" class="text-hover-animaiton">Services</a>
                                     <ul>
                                         <li>
-                                            <a href="services.html" class="text-hover-animaiton">Ventes de pneumatique & lubrifiants moteur</a>
+                                            <a href="Services/Importation et distribution de pneumatique et lubrifiants moteur.html" class="text-hover-animaiton">Ventes de pneumatique & lubrifiants moteur</a>
                                         </li>
                                         <li>
                                             <a href="services-two.html" class="text-hover-animaiton">Ateliers de réparation des voitures & poids lourd</a>
@@ -477,14 +477,14 @@
             <div class="content style_2">
                 <div class="service">
                     <div class="service-card" data-aos="fade-left">
-                        <a href="services-single.html" class="card-img">
+                        <a href="Services/Importation et distribution de pneumatique et lubrifiants moteur.html" class="card-img">
                             <img src="assets/img/service_1.jpg" class="ak-bg" alt="...">
                         </a>
                         <div class="card-info">
-                            <a href="services-single.html" class="card-title">Importation et distribution de pneumatique et lubrifiants moteur</a>
+                            <a href="Services/Importation et distribution de pneumatique et lubrifiants moteur.html" class="card-title">Importation et distribution de pneumatique et lubrifiants moteur</a>
                             <p class="card-desp">Spécialiste de l’importation et de la distribution de pneus et lubrifiants moteur, nous vous offrons des produits de haute qualité adaptés à tous vos besoins. 
                                 Performance, durabilité et sécurité sont au cœur de notre engagement pour mieux vous servir.</p>
-                            <a href="services-single.html" class="more-btn">Voir Plus</a>
+                            <a href="Services/Importation et distribution de pneumatique et lubrifiants moteur.html" class="more-btn">Voir Plus</a>
                         </div>
                     </div>
                     <div class="service-card" data-aos="fade-left">
@@ -647,10 +647,10 @@
 
     <!-- Start Footer -->
     <div class="ak-height-125 ak-height-lg-80"></div>
-    <footer class="footer style-1 footer-bg">
+    <footer class="footer style-1 footer-bg" style="background-color: #D2513A !important;">
         <div class="container">
             <div class="ak-height-40 ak-height-lg-60"></div>
-            <div class="footer-email" data-aos="fade-zoom-in" data-aos-easing="ease-in-back" data-aos-delay="100"
+            <!-- <div class="footer-email" data-aos="fade-zoom-in" data-aos-easing="ease-in-back" data-aos-delay="100"
                 data-aos-offset="0">
                 <div class="background-text" data-aos="fade-left" data-aos-delay="200" data-aos-duration="1000">
                     Newsletter</div>
@@ -674,7 +674,7 @@
                         </form>
                     </div>
                 </div>
-            </div>
+            </div> -->
             <div class="ak-height-70 ak-height-lg-30"></div>
             <div class="primary-color-border"></div>
             <div class="ak-height-35 ak-height-lg-30"></div>
