--- a/index.html
+++ b/index.html
@@ -450,7 +450,7 @@
                     </div>
                     <div class="ak-height-60 ak-height-lg-30"></div>
                     <div class="stroke-heading-text">
-                        <h3 class="ak-stroke-text hover-color-changes">+20 ans d'expérience</h3>
+                        <h3 class="ak-stroke-text hover-color-changes">+25 ans d'expérience</h3>
                         <h3 class="ak-stroke-text hover-color-changes">Service de Qualité</h3>
                         <h3 class="ak-stroke-text hover-color-changes">Performance Garantie</h3>
                         <h3 class="ak-stroke-text hover-color-changes">Des experts passionnés</h3>
@@ -548,11 +548,11 @@
     <div class="ak-height-125 ak-height-lg-80 "></div>
     <div class="container auto-counter-section">
         <div class="row align-items-center gap-lg-0 gap-3" id="counter">
-            <div class="col-lg-4">
+            <div class="col-lg-3">
                 <div class="ak-funfact ak-style1" data-aos="fade-up">
                     <div class="ak-funfact-number">
                         <div>
-                            <span id="count1" class="ak-stroke-number counter" data-number="20"></span>
+                            <span id="count1" class="ak-stroke-number counter" data-number="25"></span>
                         </div>
                         <div><span class="ak-stroke-number">+</span></div>
                     </div>
@@ -561,11 +561,11 @@
                     </div>
                 </div>
             </div>
-            <div class="col-lg-4">
+            <div class="col-lg-3">
                 <div class="ak-funfact ak-style1" data-aos="fade-up" data-aos-delay="100">
                     <div class="ak-funfact-number">
                         <div>
-                            <span id="count2" class="ak-stroke-number counter" data-number="1650"></span>
+                            <span id="count2" class="ak-stroke-number counter" data-number="5000"></span>
                         </div>
                         <div><span class="ak-stroke-number">+</span></div>
                     </div>
@@ -575,16 +575,29 @@
                     </div>
                 </div>
             </div>
-            <div class="col-lg-4">
+            <div class="col-lg-3">
                 <div class="ak-funfact ak-style1" data-aos="fade-up" data-aos-delay="150">
                     <div class="ak-funfact-number">
                         <div>
-                            <span id="count3" class="ak-stroke-number counter" data-number="20"></span>
+                            <span id="count3" class="ak-stroke-number counter" data-number="1537"></span>
                         </div>
                         <div><span class="ak-stroke-number">+</span></div>
                     </div>
                     <div class="ak-funfact-text">
-                        <p>MARQUES PRPOSÉS</p>
+                        <p>RESEAU DE VENTE ET DISTRIBUTION B2B</p>
+                    </div>
+                </div>
+            </div>
+            <div class="col-lg-3">
+                <div class="ak-funfact ak-style1" data-aos="fade-up" data-aos-delay="150">
+                    <div class="ak-funfact-number">
+                        <div>
+                            <span id="count3" class="ak-stroke-number counter" data-number="1353"></span>
+                        </div>
+                        <div><span class="ak-stroke-number">+</span></div>
+                    </div>
+                    <div class="ak-funfact-text">
+                        <p>RESEAU DE VENTE ET DISTRIBUTION B2C</p>
                     </div>
                 </div>
             </div>
