--- a/about.html
+++ b/about.html
@@ -60,75 +60,72 @@
         </div>
     </div>
 
-    <!-- Start Header Section -->
-    <header class="ak-site_header ak-style1 ak-sticky_header">
-        <div class="ak-main_header">
-            <div class="container">
-                <div class="ak-main_header_in">
-                    <div class="ak-main-header-left">
-                        <a class="ak-site_branding" href="index.html">
-                            <img src="assets/img/logo/logo.png" alt="...">
-                        </a>
+  <!-- Start Header Section -->
+  <header class="ak-site_header ak-style1 ak-sticky_header">
+    <div class="ak-main_header">
+        <div class="container">
+            <div class="ak-main_header_in">
+                <div class="ak-main-header-left">
+                    <a class="ak-site_branding" href="index.html">
+                        <img src="assets/img/logo/logo.png" alt="...">
+                    </a>
+                </div>
+                <div class="ak-main-header-center">
+                    <div class="ak-nav ak-medium">
+                        <ul class="ak-nav_list">
+                            <li class="menu-item-has-children">
+                                <a href="index.html" class="text-hover-animaiton">Acceuil</a>
+                            </li>
+                            <li>
+                                <a href="about.html" class="text-hover-animaiton">A propos</a>
+                            </li>
+                            <li class="menu-item-has-children">
+                                <a href="services.html" class="text-hover-animaiton">Services</a>
+                                <ul>
+                                    <li>
+                                        <a href="Services/Importation et distribution de pneumatique et lubrifiants moteur.html" class="text-hover-animaiton">Ventes de pneumatique & lubrifiants moteur</a>
+                                    </li>
+                                    <li>
+                                        <a href="services-two.html" class="text-hover-animaiton">Ateliers de réparation des voitures & poids lourd</a>
+                                    </li>
+                                    <li>
+                                        <a href="services-single.html" class="text-hover-animaiton">Ateliers mobile pour voitures</a>
+                                    </li>
+                                    <li>
+                                        <a href="services-single.html" class="text-hover-animaiton">Ateliers mobile pour poids lourd</a>
+                                    </li>
+                                    <li>
+                                        <a href="services-single.html" class="text-hover-animaiton">Formation et conseil Pneumatique et Lubrifiants de moteur</a>
+                                    </li>
+                                </ul>
+                            </li>
+                            <li>
+                                <a href="comming.html" class="text-hover-animaiton">E-Store</a>
+                            </li>
+                            <li>
+                                <a href="contact-us.html" class="text-hover-animaiton">Contactez Nous</a>
+                            </li>
+                            
+                        </ul>
                     </div>
-                    <div class="ak-main-header-center">
-                        <div class="ak-nav ak-medium">
-                            <ul class="ak-nav_list">
-                                <li class="menu-item-has-children">
-                                    <a href="index.html" class="text-hover-animaiton">Acceuil</a>
-                                </li>
-                                <li>
-                                    <a href="about.html" class="text-hover-animaiton">A propos</a>
-                                </li>
-                                <li class="menu-item-has-children">
-                                    <a href="services.html" class="text-hover-animaiton">Services</a>
-                                    <ul>
-                                        <li>
-                                            <a href="Services/Importation et distribution de pneumatique et lubrifiants moteur.html"
-                                                class="text-hover-animaiton">Ventes de pneumatique & lubrifiants
-                                                moteur</a>
-                                        </li>
-                                        <li>
-                                            <a href="services-two.html" class="text-hover-animaiton">Ateliers de
-                                                réparation des voitures & poids lourd</a>
-                                        </li>
-                                        <li>
-                                            <a href="services-single.html" class="text-hover-animaiton">Ateliers mobile
-                                                pour voitures</a>
-                                        </li>
-                                        <li>
-                                            <a href="services-single.html" class="text-hover-animaiton">Ateliers mobile
-                                                pour poids lourd</a>
-                                        </li>
-                                        <li>
-                                            <a href="services-single.html" class="text-hover-animaiton">Formation et
-                                                conseil Pneumatique et Lubrifiants de moteur</a>
-                                        </li>
-                                    </ul>
-                                </li>
 
-                                <li>
-                                    <a href="contact-us.html" class="text-hover-animaiton">Contactez Nous</a>
-                                </li>
-                            </ul>
-                        </div>
-
-                    </div>
-                    <div class="ak-main-header-right">
-                        <a href="tel:(+212) 05 22 67 48 98">
-                            <div class="d-flex align-items-center gap-3">
-                                <div class="heartbeat-icon">
-                                    <span class="ak-heartbeat-btn"><img src="assets/img/phone.svg" alt="..."></span>
-                                </div>
-                                <h6> (+212) 05 22 67 48 98</h6>
+                </div>
+                <div class="ak-main-header-right" style="background: #FA0003;border-radius: 15px;padding: 1px 20px;">
+                    <a href="comming.html">
+                        <div class="d-flex align-items-center gap-3">
+                            <div class="heartbeat-icon">
+                                <span class="ak-heartbeat-btn"><img src="assets/img/user.svg" alt="..."></span>
                             </div>
-                        </a>
-                    </div>
+                            <h6 style="color: white;"> Espace Client</h6>
+                        </div>
+                    </a>
                 </div>
             </div>
         </div>
-        <div class="nav-bar-border"></div>
-    </header>
-    <!-- End Header Section -->
+    </div>
+    <div class="nav-bar-border"></div>
+</header>
+<!-- End Header Section -->
 
     <!-- Start common page title  -->
     <div data-src="assets/img/about-page-title.jpg" class="ak-bg">
