--- a/index.html
+++ b/index.html
@@ -90,21 +90,24 @@
                                         </li>
                                     </ul>
                                 </li>
-                                
+                                <li>
+                                    <a href="comming.html" class="text-hover-animaiton">E-Store</a>
+                                </li>
                                 <li>
                                     <a href="contact-us.html" class="text-hover-animaiton">Contactez Nous</a>
                                 </li>
+                                
                             </ul>
                         </div>
 
                     </div>
-                    <div class="ak-main-header-right">
-                        <a href="tel:(+212) 05 22 67 48 98">
+                    <div class="ak-main-header-right" style="background: #FA0003;border-radius: 15px;padding: 1px 20px;">
+                        <a href="comming.html">
                             <div class="d-flex align-items-center gap-3">
                                 <div class="heartbeat-icon">
-                                    <span class="ak-heartbeat-btn"><img src="assets/img/phone.svg" alt="..."></span>
+                                    <span class="ak-heartbeat-btn"><img src="assets/img/user.svg" alt="..."></span>
                                 </div>
-                                <h6> (+212) 05 22 67 48 98</h6>
+                                <h6 style="color: white;"> Espace Client</h6>
                             </div>
                         </a>
                     </div>
