--- a/about.html
+++ b/about.html
@@ -323,7 +323,7 @@
         <div class="center-section-heading" data-aos="fade-up">
             <div class="ak-section-heading ak-style-1 ak-type-1">
                 <div class="background-text" data-aos="fade-left" data-aos-duration="1000">B2C ET B2B</div>
-                <h2 class="ak-section-title">Nos Reseau de vente et distribution</h2>
+                <h2 class="ak-section-title">Notre Reseau de vente et distribution</h2>
                 <div class="row align-items-center gap-lg-0 gap-3" id="counter">
                     <div class="col-lg-6">
                         <div class="choose-us-img" data-aos="fade-up" data-aos-delay="150">
