--- a/index.html
+++ b/index.html
@@ -469,6 +469,38 @@
                 </div>
             </div>
         </div>
+        <div class="ak-height-125 ak-height-lg-80"></div>
+        <div class="ak-slider ak-trusted-client-slider">
+            <h4 class="title">Notre Exclusivité</h4>
+            <div class="swiper-wrapper">
+                <div class="swiper-slide">
+                    <div class="trusted-client">
+                        <img src="assets/img/Exclusivite/ACCOR.png" alt="">
+                    </div>
+                </div>
+                <div class="swiper-slide">
+                    <div class="trusted-client">
+                        <img src="assets/img/Exclusivite/firestone_red_logo.png" alt="">
+                    </div>
+                </div>
+                <div class="swiper-slide">
+                    <div class="trusted-client">
+                        <img src="assets/img/Exclusivite/matraxtires.svg" alt="">
+                    </div>
+                </div>
+                <div class="swiper-slide">
+                    <div class="trusted-client">
+                        <img src="assets/img/Exclusivite/triangle.png" alt="">
+                    </div>
+                </div>
+                <div class="swiper-slide">
+                    <div class="trusted-client">
+                        <img src="assets/img/Exclusivite/voulis.png" alt="">
+                    </div>
+                </div>
+               
+            </div>
+        </div>
     </section>
     <!-- End Why Choose Us -->
 
@@ -616,42 +648,52 @@
             <div class="swiper-wrapper">
                 <div class="swiper-slide">
                     <div class="trusted-client">
-                        <img src="assets/img/CLIENT/continental.png" alt="">
+                        <img src="assets/img/CLIENT/Michelin.png" alt="">
                     </div>
                 </div>
                 <div class="swiper-slide">
                     <div class="trusted-client">
-                        <img src="assets/img/CLIENT/energy.png" alt="">
+                        <img src="assets/img/CLIENT/Bridgestone.jpeg" alt="">
                     </div>
                 </div>
                 <div class="swiper-slide">
                     <div class="trusted-client">
-                        <img src="assets/img/CLIENT/eziex.png" alt="">
+                        <img src="assets/img/CLIENT/apollo-tyres.png" alt="">
                     </div>
                 </div>
                 <div class="swiper-slide">
                     <div class="trusted-client">
-                        <img src="assets/img/CLIENT/falken.png" alt="">
+                        <img src="assets/img/CLIENT/yokohama.webp" alt="">
                     </div>
                 </div>
                 <div class="swiper-slide">
                     <div class="trusted-client">
-                        <img src="assets/img/CLIENT/firestone.png" alt="">
+                        <img src="assets/img/CLIENT/continental.svg" alt="">
                     </div>
                 </div>
                 <div class="swiper-slide">
                     <div class="trusted-client">
-                        <img src="assets/img/CLIENT/kenda.png" alt="">
+                        <img src="assets/img/CLIENT/sailun.jpg" alt="">
                     </div>
                 </div>
                 <div class="swiper-slide">
                     <div class="trusted-client">
-                        <img src="assets/img/CLIENT/Pirelli.png" alt="">
+                        <img src="assets/img/CLIENT/hankook.svg" alt="">
                     </div>
                 </div>
                 <div class="swiper-slide">
                     <div class="trusted-client">
-                        <img src="assets/img/CLIENT/triangle-.png" alt="">
+                        <img src="assets/img/CLIENT/goodyear.png" alt="">
+                    </div>
+                </div>
+                <div class="swiper-slide">
+                    <div class="trusted-client">
+                        <img src="assets/img/CLIENT/matador.jpg" alt="">
+                    </div>
+                </div>
+                <div class="swiper-slide">
+                    <div class="trusted-client">
+                        <img src="assets/img/CLIENT/DOubleStar.jpg" alt="">
                     </div>
                 </div>
             </div>
