--- a/about.html
+++ b/about.html
@@ -353,6 +353,66 @@
        
     </div>
     <!-- NETWORK SALES -->
+    <!-- Start Gallery -->
+    <div class="ak-height-75 ak-height-lg-80"></div>
+    <section class="container">
+        <div class="gallery" id="static-thumbnails">
+            <div class="item horizontal">
+                <a href="assets/img/Magasin/ain sbaa1.jpg">
+                    <img src="assets/img/Magasin/ain sbaa1.jpg" alt="Phto" />
+                    <div class="frame gallery-hover-icon">
+                        <span><img src="assets/img/zoom.svg" alt="zoom"></span>
+                    </div>
+                </a>
+            </div>
+
+            <div class="item vertical">
+                <a href="assets/img/Magasin/ain sbaa2.jpg">
+                    <img src="assets/img/Magasin/ain sbaa2.jpg" alt="Phto" />
+                    <div class="frame gallery-hover-icon">
+                        <span><img src="assets/img/zoom.svg" alt="zoom"></span>
+                    </div>
+                </a>
+            </div>
+
+            <div class="item horizontal">
+                <a href="assets/img/Magasin/herhoura.jpg">
+                    <img src="assets/img/Magasin/herhoura.jpg" alt="Phto" />
+                    <div class="frame gallery-hover-icon">
+                        <span><img src="assets/img/zoom.svg" alt="zoom"></span>
+                    </div>
+                </a>
+            </div>
+
+            <div class="item horizontal">
+                <a href="assets/img/Magasin/herhoura1.jpg">
+                    <img src="assets/img/Magasin/herhoura1.jpg" alt="Phto" />
+                    <div class="frame gallery-hover-icon">
+                        <span><img src="assets/img/zoom.svg" alt="zoom"></span>
+                    </div>
+                </a>
+            </div>
+
+            <div class="item">
+                <a href="assets/img/Magasin/meknes.jpg">
+                    <img src="assets/img/Magasin/meknes.jpg" alt="Phto" />
+                    <div class="frame gallery-hover-icon">
+                        <span><img src="assets/img/zoom.svg" alt="zoom"></span>
+                    </div>
+                </a>
+            </div>
+
+            <div class="item">
+                <a href="assets/img/Magasin/meknes 1.jpg">
+                    <img src="assets/img/Magasin/meknes 1.jpg" alt="Phto" />
+                    <div class="frame gallery-hover-icon">
+                        <span><img src="assets/img/zoom.svg" alt="zoom"></span>
+                    </div>
+                </a>
+            </div>
+        </div>
+    </section>
+    <!-- Snd Gallery -->
 
 
     <!-- Start Footer -->
