--- a/about.html
+++ b/about.html
@@ -135,8 +135,8 @@
             <div class="common-page-title">
                 <h3 class="page-title">Qui Sommes NOus?</h3>
                 <div class="d-flex gap-2 align-items-center">
-                    <p>Home /</p>
-                    <a href="/about.html">A propos</a>
+                    <a href="/index.html">Acceuil /</a>
+                    <a href="">A propos</a>
                 </div>
             </div>
         </div>
