--- a/Services/Atelier-de-reparation-voitures-et-poids-lourds.html
+++ b/Services/Atelier-de-reparation-voitures-et-poids-lourds.html
@@ -70,28 +70,22 @@
                                     <a href="../about.html" class="text-hover-animaiton">A propos</a>
                                 </li>
                                 <li class="menu-item-has-children">
-                                    <a href="../services.html" class="text-hover-animaiton">Services</a>
+                                    <a href="services.html" class="text-hover-animaiton">Services</a>
                                     <ul>
                                         <li>
-                                            <a href="Services/Importation et distribution de pneumatique et lubrifiants moteur.html"
-                                                class="text-hover-animaiton">Ventes de pneumatique & lubrifiants
-                                                moteur</a>
+                                            <a href="./Importation-et-distribution-de-pneumatique-et-lubrifiants-moteur.html" class="text-hover-animaiton">Ventes de pneumatique & lubrifiants moteur</a>
                                         </li>
                                         <li>
-                                            <a href="services-two.html" class="text-hover-animaiton">Ateliers de
-                                                réparation des voitures & poids lourd</a>
+                                            <a href="./Atelier-de-reparation-voitures-et-poids-lourds.html" class="text-hover-animaiton">Ateliers de réparation des voitures & poids lourd</a>
                                         </li>
                                         <li>
-                                            <a href="services-single.html" class="text-hover-animaiton">Ateliers mobile
-                                                pour voitures</a>
+                                            <a href="./Atelier-mobile-pour-voiture.html" class="text-hover-animaiton">Ateliers mobile pour voitures</a>
                                         </li>
                                         <li>
-                                            <a href="services-single.html" class="text-hover-animaiton">Ateliers mobile
-                                                pour poids lourd</a>
+                                            <a href="./Atelier-mobile-pour-poid-lourd.html" class="text-hover-animaiton">Ateliers mobile pour poids lourd</a>
                                         </li>
                                         <li>
-                                            <a href="services-single.html" class="text-hover-animaiton">Formation et
-                                                conseil Pneumatique et Lubrifiants de moteur</a>
+                                            <a href="./Formation-est-conseil-pneumatique-et-lubrifiant.html" class="text-hover-animaiton">Formation et conseil Pneumatique et Lubrifiants de moteur</a>
                                         </li>
                                     </ul>
                                 </li>
