--- a/index.html
+++ b/index.html
@@ -74,19 +74,19 @@
                                     <a href="services.html" class="text-hover-animaiton">Services</a>
                                     <ul>
                                         <li>
-                                            <a href="Services/Importation et distribution de pneumatique et lubrifiants moteur.html" class="text-hover-animaiton">Ventes de pneumatique & lubrifiants moteur</a>
+                                            <a href="Services/Importation-et-distribution-de-pneumatique-et-lubrifiants-moteur.html" class="text-hover-animaiton">Ventes de pneumatique & lubrifiants moteur</a>
                                         </li>
                                         <li>
-                                            <a href="services-two.html" class="text-hover-animaiton">Ateliers de réparation des voitures & poids lourd</a>
+                                            <a href="Services/Atelier-de-reparation-voitures-et-poids-lourds.html" class="text-hover-animaiton">Ateliers de réparation des voitures & poids lourd</a>
                                         </li>
                                         <li>
-                                            <a href="services-single.html" class="text-hover-animaiton">Ateliers mobile pour voitures</a>
+                                            <a href="Services/Atelier-mobile-pour-voiture.html" class="text-hover-animaiton">Ateliers mobile pour voitures</a>
                                         </li>
                                         <li>
-                                            <a href="services-single.html" class="text-hover-animaiton">Ateliers mobile pour poids lourd</a>
+                                            <a href="Services/Atelier-mobile-pour-poid-lourd.html" class="text-hover-animaiton">Ateliers mobile pour poids lourd</a>
                                         </li>
                                         <li>
-                                            <a href="services-single.html" class="text-hover-animaiton">Formation et conseil Pneumatique et Lubrifiants de moteur</a>
+                                            <a href="Services/Formation-est-conseil-pneumatique-et-lubrifiant.html" class="text-hover-animaiton">Formation et conseil Pneumatique et Lubrifiants de moteur</a>
                                         </li>
                                     </ul>
                                 </li>
