--- a/Services/Importation-et-distribution-de-pneumatique-et-lubrifiants-moteur.html
+++ b/Services/Importation-et-distribution-de-pneumatique-et-lubrifiants-moteur.html
@@ -172,7 +172,7 @@
 
 
                     </p>
-                    <img src="../assets//img/Magasin/meknes.jpg" data-aos="fade-up" class="img-fluid" alt="...">
+                    <img src="../assets/img/Magasin/meknes.jpg" data-aos="fade-up" class="img-fluid" alt="...">
                     <div class="ak-height-50 ak-height-lg-50"></div>
                 </div>
                 <div class="single-blog-list" data-aos="fade-up">
@@ -217,7 +217,7 @@
                         pleinement dans notre vision : offrir à nos clients des pneus fiables, innovants et accessibles,
                         tout en consolidant notre position de leader sur le marché.
                     </p>
-
+                    <img src="../assets/img/Magasin/meknes 1.jpg" data-aos="fade-up" class="img-fluid" alt="...">
                     <div class="ak-height-50 ak-height-lg-50"></div>
                 </div>
                 <div class="single-blog-list" data-aos="fade-up">
