--- a/Services/Importation-et-distribution-de-pneumatique-et-lubrifiants-moteur.html
+++ b/Services/Importation-et-distribution-de-pneumatique-et-lubrifiants-moteur.html
@@ -118,7 +118,7 @@
     </header>
     <!-- End Header Section -->
 
-    <div data-src="../assets/img/services-single-2.jpg" class="ak-bg">
+    <div data-src="../assets/img/banner/pneu.jpg" class="ak-bg">
         <div class="ak-height-100 ak-height-lg-100"></div>
         <div class="ak-height-125 ak-height-lg-40"></div>
         <div class="container">
